# hangsha/src/main/kotlin/com/team1/hangsha/category/controller/CategoryController.kt
@@ -1,13 +1,13 @@
 package com.team1.hangsha.category.controller
 
-import com.team1.hangsha.category.dto.CategoryResponse
-import com.team1.hangsha.category.dto.core.CategoryDto
 import com.team1.hangsha.category.service.CategoryService
 import io.swagger.v3.oas.annotations.Operation
 import io.swagger.v3.oas.annotations.tags.Tag
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RestController
+import com.team1.hangsha.category.dto.ListCategoryGroupWithCategoriesResponse
+import com.team1.hangsha.category.dto.ListOrgCategoriesResponse
 
 @Tag(name = "Categories")
 @RequestMapping("/api/v1")
@@ -17,12 +17,14 @@ class CategoryController(
 ) {
     @Operation(summary = "카테고리 그룹 + 카테고리 목록")
     @GetMapping("/category-groups/with-categories")
-    fun getCategoryGroupsWithCategories(): List<CategoryResponse> {
-        return categoryService.getCategoryGroupsWithCategories()
+    fun getCategoryGroupsWithCategories(): ListCategoryGroupWithCategoriesResponse {
+        val items = categoryService.getCategoryGroupsWithCategories()
+        return ListCategoryGroupWithCategoriesResponse(items)
     }
     @Operation(summary = "주체기관 카테고리 목록 조회")
     @GetMapping("/categories/orgs")
-    fun getOrgCategories(): List<CategoryDto> {
-        return categoryService.getOrgCategories()
+    fun getOrgCategories(): ListOrgCategoriesResponse {
+        val items = categoryService.getOrgCategories()
+        return ListOrgCategoriesResponse(items)
     }
 }
