# hangsha/src/main/kotlin/com/team1/hangsha/category/dto/ListCategoryGroupsWithCategoriesResponse.kt
@@ -1,0 +1,5 @@
+package com.team1.hangsha.category.dto
+
+data class ListCategoryGroupWithCategoriesResponse(
+    val items: List<CategoryResponse>
+)
